# create3_cyros

cam/: package.xml  setup.py
cam/cam/: cam_rs.py  cam_yolo.py
create3_cam/: package.xml  setup.cfg  setup.py
create3_cam/create3_cam/: cam.py  cam_yolo.py  server.py
create3_procedures/: README.md  package.xml  setup.cfg  setup.py
create3_procedures/create3_procedures/dodge/: dodge_procedure.py  fowar.py  movement_action_client.py  movement_action_server.py  square.py
create3_procedures/interfaces/: roam.action
create3_teleop/: setup.py
create3_teleop/create3_teleop/: teleop_k.py
install/: local_setup.sh  setup.sh
install/create3_image/lib/create3_image/: server  webcam
log/: latest_build
src/create3_image/: package.xml  setup.cfg  setup.py
src/create3_image/create3_image/: app.py  detection.py  webcam.py  yolov4-tiny.py
src/create3_image/create3_image/templates/: index.html
src/create3_image/launch/: launch.py
src/create3_msgs/: CMakeLists.txt
src/create3_msgs/msg/: Armcontrol.msg
src/create3_organize/: package.xml  setup.cfg  setup.py
src/create3_organize/create3_organize/: organize.py
src/create3_organize/launch/: launch.py
src/create3_procedures/: package.xml  setup.py
src/create3_procedures/create3_procedures/: interaction.py  movement.py  test.py
src/create3_procedures/interfaces/: arm_control.msg
src/create3_teleop/: README.md  package.xml
src/real_sense_read/: serial_read.py
src/rs_cam/: package.xml  setup.cfg  setup.py
src/rs_cam/launch/: launch.py  st_launch.py
src/rs_cam/rs_cam/: app.py
(+115 files in other folders)
