<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>create3_image</name>
  <version>0.0.1</version>
  <description>Python examples for interacting with the iRobot(R) Create(R) 3 Educational Robot</description>
  <maintainer email="jkearns@irobot.com">jkearns</maintainer>
  <license>BSD</license>
  <author email="jkearns@irobot.com">Justin Kearns</author>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>irobot_create_msgs</depend>
  <depend>numpy</depend>
  <depend>cv2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
